# lap

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  RELEASING.md  appveyor.yml  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/.workflows/: code-quality-main.yml  code-quality-pr.yaml
.github/workflows/: benchmark.yaml  build_all.yaml  build_and_test.yaml  build_linux.yaml  build_mac.yaml  build_pypi.yaml  build_win.yaml  cibuildwheel.yaml  code-quality-main.yml  code-quality-pr.yaml  prepublish.yaml  publish.yaml  python-publish.yml  test.yaml  test_build_linux.yaml  test_build_mac.yaml  test_build_win.yaml  test_full.yaml  test_simple.yaml
.githubtest/: benchmark.py  simple_test.py  test_simple.py
_lapjv_cpp/: _lapjv.pyx  lapjv.cpp  lapmod.cpp
_lapjv_src/: _lapjv.pyx
bench/: bench.sh  matrix_dense_hard.py  matrix_nnz.py  matrix_sparse.py  overview_dense.py  overview_sparse.py  plots.ipynb
benchmark/: bench.sh  benchmark_simple.py  matrix_dense_hard.py  matrix_nnz.py  matrix_sparse.py  overview_dense.py  overview_sparse.py
lap/: .gitignore  __init__.py  _lapjv.cpp  _lapjv.pyx  lapmod.py  version.py
lap/tests/: test_arr_loop.py  test_lapjv.py  test_lapmod.py  test_utils.py
lapjv/: README  __init__.py  _lapjv.pyx  gnrl.h  int32t.h  lap.cpp  lap.h  lapjv.c  lapjv.cpp  lapjv.h  lapmain.cpp  lapmod.c  lapmod.cpp  lapmod.py  setup.py  system.cpp
lapjv/internal/: README.md  lap.c  lap.cpp  lap.h  system.h
lapjv/tests/: sparse_matrix.py  test_arr_loop.py  test_lapjv.py  test_lapmod.py  test_utils.py  tests.py
pylapjv/: LICENSE  wrap_lapjv.cpp  wrap_lapjv.h
python-lapjv/: .gitignore  README  README.md  python_lapjv.pyx  setup.py  test.py  test_lap.py  wrap_lapjv.cpp  wrap_lapjv.h
src/lap/: _lapjv.cpp  _lapjv.pyx  lapmod.cpp
tests/: conftest.py  test_lapjv.py  test_lapmod.py  test_utils.py
tools/: build_versions.py  header.py  install.ps1  install_pythons.sh  run_with_env.cmd  travis.sh  travis_before_install.sh  travis_osx_install.sh  travis_section_def.sh
