[build-system]
requires = [
  "setuptools",
  "numpy>=1.10.1",
  "cython>=0.21",
]
build-backend = "setuptools.build_meta"

[project]
name = "lap"
version = "0.4.1"
description = "Linear Assignment Problem solver (LAPJV/LAPMOD)."
readme = "README.md"
authors = [
  {name= "Tomas Kazmar", email= "tomash.kazmar@seznam.cz"},
]
license = {text = "BSD (2-clause)"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
dependencies = [
    "numpy >= 1.10.1",
]

[project.urls]
homepage = "https://github.com/gatagat/lap"
