[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cython",
    # build against earliest supported numpy version per python version
    "numpy==1.14.5; python_version=='3.7'",
    "numpy==1.17.3; python_version=='3.8'",
    "numpy==1.19.3; python_version=='3.9'",
    "numpy==1.21.3; python_version=='3.10'",
    "numpy==1.23.2; python_version=='3.11'",
    # will need to drop distutils in setup.py for 3.12 to work 
    "numpy==1.24.0; python_version=='3.12'",
]
build-backend = "setuptools.build_meta"
